<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.walmartlabs.classwork.imagesearcher.activities.SettingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_size_label"
        android:id="@+id/tvImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_filter_label"
        android:id="@+id/tvColorFilter"
        android:layout_below="@+id/tvImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_type_label"
        android:id="@+id/tvImageType"
        android:layout_below="@+id/tvColorFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site_filter_label"
        android:id="@+id/tvSiteFilter"
        android:layout_below="@+id/spImageType"
        android:layout_alignRight="@+id/tvImageType"
        android:layout_alignEnd="@+id/tvImageType"
        android:layout_alignLeft="@id/tvColorFilter"
        android:paddingTop="30dp"/>

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/spImageSize"
        android:layout_alignBaseline="@+id/tvImageSize"
        android:layout_alignBottom="@+id/tvImageSize"
        android:layout_toRightOf="@+id/tvImageSize"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:gravity="center"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spColorFilter"
        android:layout_alignTop="@+id/tvColorFilter"
        android:layout_alignLeft="@+id/spImageSize"
        android:layout_alignStart="@+id/spImageSize"
        android:layout_alignEnd="@id/spImageSize" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImageType"
        android:layout_alignTop="@+id/tvImageType"
        android:layout_alignLeft="@+id/spImageSize"
        android:layout_alignStart="@+id/spImageSize"
        android:layout_alignEnd="@id/spImageSize"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/etSiteFilter"
        android:layout_alignBottom="@+id/tvSiteFilter"
        android:layout_alignLeft="@+id/spImageType"
        android:layout_alignStart="@+id/spImageType"
        android:layout_alignEnd="@id/spImageType"
        android:hint="@string/site_filter_text_label"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_label"
        android:id="@+id/btnSave"
        android:layout_below="@+id/etSiteFilter"
        android:layout_alignLeft="@+id/etSiteFilter"
        android:layout_alignStart="@+id/etSiteFilter"
        android:layout_marginTop="54dp"
        android:onClick="onSave"/>

</RelativeLayout>
